--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 		<developer>
 			<id>codesakshi</id>
 			<name>Anilal P S</name>
-			<email>anilalps@gmail.com</email>
+			<email>anilalps.dev@gmail.com</email>
 			<organization>Code Sakshi</organization>
 			<organizationUrl>https://github.com/codesakshi</organizationUrl>
 			<roles>
